# openapi.yaml
@@ -1,249 +1,249 @@
 # Generated with protoc-gen-openapi
 # https://github.com/googleapis/gnostic/tree/master/apps/protoc-gen-openapi
 
-openapi: 3.1.0
+openapi: 3.0.3
 info:
-  title: Inventory
-  version: 0.0.1
+    title: Inventory
+    version: 0.0.1
 paths:
-  /v1/equipment:
-    get:
-      operationId: EquipmentService_ListEquipment
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ListEquipmentResponse"
-    post:
-      operationId: EquipmentService_CreateEquipment
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Equipment"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CreateEquipmentResponse"
-  /v1/equipment/{id}:
-    get:
-      operationId: EquipmentService_GetEquipment
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GetEquipmentResponse"
-    put:
-      operationId: EquipmentService_UpdateEquipment
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Equipment"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UpdateEquipmentResponse"
-    delete:
-      operationId: EquipmentService_DeleteEquipment
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DeleteEquipmentResponse"
-  /v1/vehicles:
-    post:
-      operationId: VehicleService_CreateVehicle
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Vehicle"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CreateVehicleResponse"
-  /v1/vehicles/:
-    get:
-      operationId: VehicleService_ListVehicle
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ListVehicleResponse"
-  /v1/vehicles/{id}:
-    get:
-      operationId: VehicleService_GetVehicle
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/GetVehicleResponse"
-    put:
-      operationId: VehicleService_UpdateVehicle
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Vehicle"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UpdateVehicleResponse"
-    delete:
-      operationId: VehicleService_DeleteVehicle
-      parameters:
-        - name: id
-          in: query
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DeleteVehicleResponse"
+    /v1/equipment:
+        get:
+            operationId: EquipmentService_ListEquipment
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListEquipmentResponse'
+        post:
+            operationId: EquipmentService_CreateEquipment
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Equipment'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateEquipmentResponse'
+    /v1/equipment/{id}:
+        get:
+            operationId: EquipmentService_GetEquipment
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetEquipmentResponse'
+        put:
+            operationId: EquipmentService_UpdateEquipment
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Equipment'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateEquipmentResponse'
+        delete:
+            operationId: EquipmentService_DeleteEquipment
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteEquipmentResponse'
+    /v1/vehicles:
+        post:
+            operationId: VehicleService_CreateVehicle
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Vehicle'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateVehicleResponse'
+    /v1/vehicles/:
+        get:
+            operationId: VehicleService_ListVehicle
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListVehicleResponse'
+    /v1/vehicles/{id}:
+        get:
+            operationId: VehicleService_GetVehicle
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetVehicleResponse'
+        put:
+            operationId: VehicleService_UpdateVehicle
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/Vehicle'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateVehicleResponse'
+        delete:
+            operationId: VehicleService_DeleteVehicle
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteVehicleResponse'
 components:
-  schemas:
-    CreateEquipmentResponse:
-      properties:
-        equipment:
-          $ref: "#/components/schemas/Equipment"
-    CreateVehicleResponse:
-      properties:
-        vehicle:
-          $ref: "#/components/schemas/Vehicle"
-    DeleteEquipmentResponse:
-      properties:
-        equipment:
-          $ref: "#/components/schemas/Equipment"
-    DeleteVehicleResponse:
-      properties:
-        vehicle:
-          $ref: "#/components/schemas/Vehicle"
-    Equipment:
-      properties:
-        id:
-          type: integer
-          format: uint64
-        name:
-          type: string
-        tags:
-          type: array
-          items:
-            type: string
-        condition:
-          type: integer
-          format: enum
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-    GetEquipmentResponse:
-      properties:
-        equipment:
-          $ref: "#/components/schemas/Equipment"
-    GetVehicleResponse:
-      properties:
-        vehicle:
-          $ref: "#/components/schemas/Vehicle"
-    ListEquipmentResponse:
-      properties:
-        equipment:
-          type: array
-          items:
-            $ref: "#/components/schemas/Equipment"
-    ListVehicleResponse:
-      properties:
-        vehicles:
-          type: array
-          items:
-            $ref: "#/components/schemas/Vehicle"
-    UpdateEquipmentResponse:
-      properties:
-        equipment:
-          $ref: "#/components/schemas/Equipment"
-    UpdateVehicleResponse:
-      properties:
-        vehicle:
-          $ref: "#/components/schemas/Vehicle"
-    Vehicle:
-      properties:
-        id:
-          type: integer
-          format: uint64
-        make:
-          type: string
-        model:
-          type: string
-        year:
-          type: string
-        active:
-          type: boolean
-        tags:
-          type: array
-          items:
-            type: string
-        condition:
-          type: integer
-          format: enum
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
+    schemas:
+        CreateEquipmentResponse:
+            properties:
+                equipment:
+                    $ref: '#/components/schemas/Equipment'
+        CreateVehicleResponse:
+            properties:
+                vehicle:
+                    $ref: '#/components/schemas/Vehicle'
+        DeleteEquipmentResponse:
+            properties:
+                equipment:
+                    $ref: '#/components/schemas/Equipment'
+        DeleteVehicleResponse:
+            properties:
+                vehicle:
+                    $ref: '#/components/schemas/Vehicle'
+        Equipment:
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                name:
+                    type: string
+                tags:
+                    type: array
+                    items:
+                        type: string
+                condition:
+                    type: integer
+                    format: enum
+                created_at:
+                    type: string
+                    format: RFC3339
+                updated_at:
+                    type: string
+                    format: RFC3339
+        GetEquipmentResponse:
+            properties:
+                equipment:
+                    $ref: '#/components/schemas/Equipment'
+        GetVehicleResponse:
+            properties:
+                vehicle:
+                    $ref: '#/components/schemas/Vehicle'
+        ListEquipmentResponse:
+            properties:
+                equipment:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Equipment'
+        ListVehicleResponse:
+            properties:
+                vehicles:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Vehicle'
+        UpdateEquipmentResponse:
+            properties:
+                equipment:
+                    $ref: '#/components/schemas/Equipment'
+        UpdateVehicleResponse:
+            properties:
+                vehicle:
+                    $ref: '#/components/schemas/Vehicle'
+        Vehicle:
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                make:
+                    type: string
+                model:
+                    type: string
+                year:
+                    type: string
+                active:
+                    type: boolean
+                tags:
+                    type: array
+                    items:
+                        type: string
+                condition:
+                    type: integer
+                    format: enum
+                created_at:
+                    type: string
+                    format: RFC3339
+                updated_at:
+                    type: string
+                    format: RFC3339
